# vector_govi_2

./: .env.example  .gitignore  CLAUDE.md  docker-compose.vllm.yml
extracao/: README.md  RUNPOD_CONTEXT.md  pyproject.toml
extracao/data/output/: INSTRUÇÃO NORMATIVA SEGES Nº 58_2022_extracted.md  L14133.md  L14133_part1of3_pipeline_v3_report.json  L14133_part2of3_pipeline_v3_report.json  L14133_part3of3_pipeline_v3_report.json  L14133_pipeline_http_report.json  L14133_pipeline_v3_report.json  chunks_test.json  enrichment_benchmark.json  in_65_2021_clean.json  in_65_2021_clean_chunks.json  (+9 more)
extracao/deploy/: Dockerfile  README_RUNPOD.md  docker-compose.yml  env.sh  pack_for_runpod.bat  pack_for_runpod.sh  requirements.txt  runpod_setup.sh  start_services.sh  stop_services.sh
extracao/docs/: 2024-12-25-lessons-learned.md  CACHE_SEMANTICO.md  OTIMIZACAO_LATENCIA.md
extracao/scripts/: benchmark_retrieval.py  check_progress.py  convert_and_process.py  enrich_existing_chunks.py  fix_art001.py  init_milvus.py  migrate_to_v3.py  run_enrichment_celery.py  run_pipeline.py  run_pipeline_v3.py  split_and_process.py  test_answer_generator.py  warmup_server.py
extracao/src/: __init__.py  config.py  model_pool.py
extracao/tests/: __init__.py  extraction_validator.py  leis_decretos_triple.json  test_2stage_retrieval.py  test_article_orchestrator.py  test_chunk_materializer.py  test_chunking.py  test_colbert_vs_crossencoder.py  test_dashboard.py  test_enrichment.py  test_extraction_fix.py  test_page_spans.py  test_search_module.py  test_span_extractor.py  test_span_parser.py
(+76 files in other folders)
