[project]
name = "law-extraction-pipeline"
version = "0.1.0"
description = "Pipeline de extração agêntico para documentos legais - Sistema RAG"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "Pipeline Team" }
]

dependencies = [
    # Extração de documentos
    "docling>=2.15.0",
    
    # Framework agêntico
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    
    # LLM
    "openai>=1.50.0",
    
    # Embeddings
    "sentence-transformers>=3.3.0",
    
    # Vector Store
    "pymilvus>=2.5.0",
    
    # API (para depois)
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    
    # Utils
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true

